# stock_portfolio

./: Cargo.toml  LICENSE  README.md
docs/: example_config.md  examples_report.md  examples_stats.md  sp_dstool.md  sp_report.md  sp_stats.md  sp_yhist.md
py_scripts/: sp_datastore.py
scripts/: test_dstool.sh
scripts/bash/: nightly_run.sh  stock_status.sh  test_dstool.sh
scripts/python/: make_research_ds.py  plot_stats.py  plot_stats_base.py  pyplot_stats.py  sp_datastore.py  sp_util.py
src/: application.rs  arguments.rs  lib.rs  main.rs  portfolio.rs  sputil.rs  yfinance.rs
src/application/: application.rs  arguments.rs
src/portfolio/: algorithms.rs  reports.rs  stock.rs  stock_type.rs  stocks_cache.rs  stocks_reader.rs  stocks_update.rs  tests.rs
src/sp_dstool/: application.rs  arguments.rs
src/sp_lib/: datastore.rs  lib.rs  portfolio.rs  report.rs  stats.rs  util.rs
src/sp_lib/datastore/: datastore.rs  dividends.rs  export.rs  history.rs  splits.rs
src/sp_lib/portfolio/: algorithms.rs  closed_position.rs  closed_positions_reader.rs  extra_sort_ftns.rs  report_params.rs  report_type.rs  reports.rs  stock.rs  stock_type.rs  stocks_cache.rs  stocks_config.rs  stocks_filter.rs  stocks_reader.rs  stocks_update.rs  (+1 more)
src/sp_report/: application.rs  arguments.rs  main.rs
src/sp_stats/: application.rs  arguments.rs  main.rs
src/sp_yhist/: application.rs  arguments.rs
src/sputil/: datetime.rs  price_type.rs  tests.rs
src/yfinance/: query.rs  tests.rs  types.rs
tests/: test_datastore.rs  test_portfolio.rs  test_sputil.rs  test_yfinance.rs
(+28 files in other folders)
