[package]
name = "stock_portfolio"
version = "0.1.0"
authors = ["jrtabash <jrtabash@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
curl = "0.4.34"

# [dependencies.peroxide]
# version = "0.30"
# default-features = false
# features = ["plot", "csv"]
