[package]
name = "stock_portfolio"
version = "0.6.0"
authors = ["jrtabash"]
edition = "2018"

[[bin]]
name = "sp_report"
path = "src/sp_report/main.rs"

[[bin]]
name = "sp_dstool"
path = "src/sp_dstool/main.rs"

[[bin]]
name = "sp_stats"
path = "src/sp_stats/main.rs"

[[bin]]
name = "sp_yhist"
path = "src/sp_yhist/main.rs"

[lib]
name = "sp_lib"
path = "src/sp_lib/lib.rs"

[dependencies]
chrono = "0.4"
curl = "0.4.34"
clap = "2.33.3"
